--- a/package.json
+++ b/package.json
@@ -3,21 +3,18 @@
   "version": "0.0.0",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-blog": "0.0.0",
+    "grunt-pages": "~0.2.2",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-compass": "~0.2.0",
-    "grunt-contrib-cssmin": "~0.6.0",
     "grunt-contrib-connect": "~0.2.0",
-    "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-rev": "~0.1.0",
-    "grunt-usemin": "~0.1.12",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-livereload": "~0.1.2",
     "grunt-open": "~0.2.0",
-    "grunt-concurrent": "~0.1.1",
     "grunt-contrib-watch": "~0.4.3",
-    "matchdep": "~0.1.2"
+    "matchdep": "~0.1.1"
   },
   "engines": {
     "node": ">=0.10.0"
   }
 }
+
