--- a/package.json
+++ b/package.json
@@ -2,19 +2,14 @@
   "name": "blog",
   "version": "0.0.0",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-pages": "~0.8.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-compass": "~0.2.0",
-    "grunt-contrib-connect": "~0.2.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-livereload": "~0.1.2",
-    "grunt-open": "~0.2.0",
-    "grunt-contrib-watch": "~0.4.3",
-    "matchdep": "~0.1.1",
-    "grunt-gh-pages": "~0.7.5"
-  },
-  "engines": {
-    "node": ">=0.10.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-autoprefixer": "~0.6.4",
+    "grunt": "~0.4.2",
+    "grunt-contrib-connect": "~0.6.0",
+    "grunt-sass": "~0.10.0",
+    "load-grunt-tasks": "~0.2.1",
+    "grunt-gh-pages": "~0.9.0"
   }
 }
